# crypto-bot

./: .gitignore  AI Crypto Trading Techniques and Profitability.docx  README.md  firebase.json  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-web.yml  deploy-worker.yml
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/auth/: auth-gate.tsx
apps/web/components/dashboard/: activity-panels.tsx  metric-card.tsx  mode-control.tsx  performance-charts.tsx  settings-panel.tsx
apps/web/components/providers/: app-providers.tsx
apps/web/hooks/: use-auth-session.ts  use-bot-dashboard.ts
apps/web/lib/: format.ts  supabase.ts
apps/worker/: .env.example  README.md  pyproject.toml
apps/worker/src/crypto_bot_worker/: __main__.py  cli.py  config.py  models.py  worker.py
apps/worker/src/crypto_bot_worker/services/: __init__.py  binance.py  brokers.py  gemini.py  repository.py
apps/worker/src/crypto_bot_worker/strategy/: __init__.py  engine.py  indicators.py
apps/worker/tests/: test_indicators.py  test_strategy_engine.py
deploy/: bootstrap-oracle.sh  worker-runtime.env.example
deploy/systemd/: crypto-bot-worker.service
docs/: CREDENTIALS.md  DEPLOYMENT.md
supabase/migrations/: 001_init_crypto_bot.sql  002_add_mode_to_signals_and_fills.sql
