[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "crypto-bot-worker"
version = "0.1.0"
description = "Oracle-hosted worker for the crypto bot control room."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "binance-connector>=3.0.0",
  "httpx>=0.27.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "supabase>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
crypto-bot-worker = "crypto_bot_worker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_bot_worker"]

